Mark employees and mashup npm packages as private

--- a/node/mashup/package.json
+++ b/node/mashup/package.json
@@ -1,8 +1,9 @@
 {
-  "name":"mashup",
-  "version":"0.0.0",
-  "description":"Geocoding mashup",
-  "main":"server.js",
+  "name": "mashup",
+  "version": "0.0.0",
+  "description": "Geocoding mashup",
+  "main": "server.js",
+  "private": true,
   "dependencies": {
     "request": "2.x.x"
   }
