--- a/node/employees/package.json
+++ b/node/employees/package.json
@@ -1,11 +1,12 @@
 {
-  "name":"employees",
-  "version":"0.0.0",
-  "description":"Employee Database API",
-  "main":"server.js",
-  "dependencies": {
-    "express":"3.x.x",
-    "usergrid":"x.x.x"
+  "name": "employees",
+  "version": "0.0.0",
+  "description": "Employee Database API",
+  "main": "server.js",
+  "private": true,
+  "dependencies":  {
+    "express": "3.x.x",
+    "usergrid": "x.x.x"
   }
 }
 
